// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component snapshot Test renders a button with the correct icon side "left" 1`] = `
.c0 {
  margin-right: 10px;
}

<button
  className="hover:bg-primary-type-1-500 bg-primary-type-1-base transition rounded-md py-2 px-4 text-white min-w-btn ring-offset-2 focus:ring-2 focus:ring-primary-type-2-base"
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-minus c0"
    data-icon="minus"
    data-prefix="fas"
    focusable="false"
    role="img"
    side="left"
    style={{}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"
      fill="currentColor"
      style={{}}
    />
  </svg>
  Button
</button>
`;

exports[`Button component snapshot Test renders a button with the correct icon side "right" 1`] = `
.c0 {
  margin-left: 10px;
}

<button
  className="hover:bg-primary-type-1-500 bg-primary-type-1-base transition rounded-md py-2 px-4 text-white min-w-btn ring-offset-2 focus:ring-2 focus:ring-primary-type-2-base"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-plus c0"
    data-icon="plus"
    data-prefix="fas"
    focusable="false"
    role="img"
    side="right"
    style={{}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
      fill="currentColor"
      style={{}}
    />
  </svg>
</button>
`;
